--- a/0927leetcode/0927leetcode/0927leetcode.vcxproj.filters
+++ b/0927leetcode/0927leetcode/0927leetcode.vcxproj.filters
@@ -393,5 +393,8 @@
     <ClCompile Include="92.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="125.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
